--- a/HomeWorkFor2.4Lession/Base.lproj/Main.storyboard
+++ b/HomeWorkFor2.4Lession/Base.lproj/Main.storyboard
@@ -27,10 +27,10 @@
             </objects>
             <point key="canvasLocation" x="-116" y="82"/>
         </scene>
-        <!--View Controller-->
+        <!--Settings View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="HomeWorkFor2_4Lession" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="SettingsViewController" customModule="HomeWorkFor2_4Lession" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
