--- a/HomeWorkFor2.4Lession/Base.lproj/Main.storyboard
+++ b/HomeWorkFor2.4Lession/Base.lproj/Main.storyboard
@@ -139,7 +139,7 @@
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Wkl-5Y-N6i">
                                         <rect key="frame" x="0.0" y="38" width="60" height="34"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
+                                        <textInputTraits key="textInputTraits" keyboardType="decimalPad" enablesReturnKeyAutomatically="YES"/>
                                     </textField>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ryT-Wr-Uj8">
                                         <rect key="frame" x="0.0" y="76" width="60" height="34"/>
